<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:prvandroid="http://schemas.android.com/apk/prv/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >


    <TextView 
        android:layout_marginTop="30dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_imei_lable"
          android:textSize="18sp"
        />

 	<LinearLayout 
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:orientation="horizontal"
 	    >
        <TextView 
	        android:layout_width="50dip"
	        android:layout_height="wrap_content"
	        android:textSize="16sp"
	        android:layout_marginLeft="20dip"
	        android:text="@string/card_1"
	        />
 	    <EditText 
 	        android:id="@+id/et_imei_card1"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:maxLength="15"
	        android:textSize="16sp"
	        android:hint="@string/edit_hint"
 	        />
 	    	<Button 
	    android:id="@+id/bt_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:text="@string/submit"
	    android:textSize="12sp"
	    />
 	</LinearLayout>
 	
 	 	<LinearLayout 
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:orientation="horizontal"
 	    >
        <TextView 
	        android:layout_width="50dip"
	        android:layout_height="wrap_content"
	        android:textSize="16sp"
	        android:layout_marginLeft="20dip"
	        android:text="@string/card_2"
	        />
 	    <EditText 
 	        android:id="@+id/et_imei_card2"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:maxLength="15"
	        android:textSize="16sp"
	        android:hint="@string/edit_hint"
 	        />
 	    
 	  	<Button 
	    android:id="@+id/bt_change1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:text="@string/submit"
	      android:textSize="12sp"
	    />
 	</LinearLayout>

		<Button 
	    android:id="@+id/bt_cancle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dip"
        android:layout_marginRight="40dip"
	    android:text="@string/cancel"
	    />
	
</LinearLayout>